--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.11.0",
+    "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "remixicon": "^4.6.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
